# spyware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh  config.h.in
src/: CMakeLists.txt  main.cpp  spyware.exe.manifest
src/amqp/: AmqpChannel.cpp  AmqpChannel.hpp  AmqpClient.cpp  AmqpClient.hpp  AmqpConnection.cpp  AmqpConnection.hpp
src/core/: authentication.cpp  authentication.hpp  debug.cpp  debug.hpp  spyware.cpp  spyware.hpp  utils.cpp  utils.hpp
src/loggers/: keylogger.cpp  keylogger.hpp  screenshot.cpp  screenshot.hpp
